src/objects/Ownership__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ownership</relationshipLabel>
        <relationshipName>Ownership_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Nr__c</fullName>
        <label>Customer Nr</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>Ownership</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bonus/Stamm-Nr.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ownership</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>